2008-08-27  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/mod_roster.erl: Remove a debugging io:format/2.

2008-08-26  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/jlib.erl: short_jid/1 and short_bare_jid/1 now produce a short
	JID from the user-provided JID parts. To obtain a short JID from the
	STRINGPREP'd parts, use the new short_prepd_jid/1 and
	short_prepd_bare_jid/1 functions. Remove commented-out code and use
	proper variable names. Those functions use the atom 'undefined' and
	NOT the empty string anymore!

	* src/acl.erl, src/ejabberd_router.erl: Use the new functions from
	jlib.

	* src/ejabberd_router.erl, src/ejabberd_local.erl,
	src/ejabberd_sm.erl, src/ejabberd_s2s.erl, src/ejabberd_s2s_in.erl,
	src/ejabberd_s2s_out.erl, src/ejabberd_c2s.erl: Remove the
	compatibility code. It's becoming confusing to handle every case every
	where. Also, in JIDs (normal and short), the atom "undefined' is
	expected, not the empty string anymore!

	* src/mod_roster.hrl, src/mod_roster.erl: Remove compatibility code.
	Use the atom 'undefined' in JIDs (normal and short). Add try/catch
	blocks where Exmpp can raise exceptions. Remove some unused code.
	Convert on-disk Mnesia database: JIDs, extra XML elements and
	askmessage are concerned. By default, 'askmessage' is now an empty
	binary instead of an empty string, for consistency's sake. Fix some
	bugs.

2008-08-14  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* translate.erl (ascii_tolower): Accept 'undefined' as a language and
	treat it as the empty string.

	* src/gen_iq_handler.erl, src/ejabberd_local.erl, src/ejabberd_sm.erl:
	Remove the compatibility layer and always call modules with the new
	#iq record from Exmpp.

	* src/mod_roster.erl, src/mod_vcard.erl, src/adhoc.erl,
	src/mod_adhoc.erl, src/mod_configure.erl, src/mod_configure2.erl,
	src/mod_disco.erl, src/mod_last.erl: Convert to the new #iq record
	from Exmpp.
