@@ -2,6 +2,9 @@
 
 	* src/mod_roster.erl: Remove a debugging io:format/2.
 
+	* src/mod_caps.erl: handle_cast({disco_response, ...}, ...) now
+	receives an #iq record: update the code to handle this.
+
 2008-08-26  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* src/jlib.erl: short_jid/1 and short_bare_jid/1 now produce a short
